fixed ArrayMethod.asList